remove delete room

--- a/views/partials/chatrooms.handlebars
+++ b/views/partials/chatrooms.handlebars
@@ -17,11 +17,11 @@
         <input type="text" id="message-input" class="shadow appearance-none border-solid border-2 border-gray-900 rounded w-3/5 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Type here"/>
         <button class="bg-pink-700 rounded-md py-2 px-4 send-message">Send</button>
       </div>
-      <div>
+      {{!-- <div>
         <button class="bg-sky-600 rounded-md p-2 delChat" data-id={{chatroom.id}}>DELETE Room</button>
-      </div>
+      </div> --}}
     </div>
   </div>
 {{/each}}
 
-<script src="/js/deleteChat.js"></script>
+{{!-- <script src="/js/deleteChat.js"></script> --}}
