--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
   class="bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] bg-[#292240] flex items-center justify-center min-h-screen text-[#9e9cb6]"
 >
   <section
-    class="w-full max-w-[430px] relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden"
+    class="w-3/5 max-w-lg relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden"
   >
     <h2 class="my-3 text-2xl text-slate-300 uppercase text-center">{{username}}'s Page</h2>
     <div>
@@ -33,10 +33,10 @@
           {{/each}}
         </div>
       {{/if}}
-      <div class="my-4 flex justify-center items-center createNew">
+      <div class="my-4 flex justify-center items-center">
         <button
           type="submit"
-          class="mt-2 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+          class="createNew mt-2 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
         >Create New Blog</button>
       </div>
     </div>
