--- a/views/partials/createBlog.handlebars
+++ b/views/partials/createBlog.handlebars
@@ -1,11 +1,11 @@
-<div class="createBlogForm bg-slate-900 text-gray-300 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 hidden">
-      <h3 class="text-center font-bold text-xl mb-1">Create a New Blog</h3>
+<div class="createBlogForm bg-slate-900 border text-gray-300 mx-2 rounded-[6px] w-7/12 absolute hidden" style="top: 25%;">
+      <h3 class="text-center font-bold text-xl my-2">Create a New Blog</h3>
 
       <form class="form newBlogForm">
         <div class="flex flex-col items-center gap-2 my-4">
           <label class="flex-nowrap font-bold" for="blogTitle">Blog Title:</label>
           <input
-            class="w-full p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none text-slate-800"
+            class="w-11/12 p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none text-slate-800"
             type="text"
             id="blogTitle"
             name="blogTitle"
@@ -14,19 +14,21 @@
         <div class="flex flex-col items-center gap-2 mb-4">
           <label class="font-bold" for="blogContent">Content:</label>
           <textarea
-            class="w-full h-64 p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none text-slate-800"
+            class="w-11/12 h-64 p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none text-slate-800"
             id="blogContent"
             name="blogContent"
           ></textarea>
         </div>
-        <label class="flex-nowrap font-bold" for="blogTitle">Blog Tag
+        <div class="flex flex-col items-center gap-2 mb-4">
+          <label class="flex-nowrap font-bold" for="blogTitle">Blog Tag
           (Optional):</label>
         <input
-          class="w-full p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none text-slate-800"
+          class="w-11/12 p-2 my-2 mx-2 bg-slate-0 rounded-md border-2 focus:outline-none text-slate-800"
           type="text"
           id="blogTag"
           name="blogTag"
         />
+        </div>
         <div class="flex justify-center items-center">
           <button
             type="submit"
@@ -34,6 +36,12 @@
           >Post Blog!</button>
         </div>
       </form>
+      <div class="flex justify-center items-center mb-2">
+        <button
+          id="closeForm"
+          class="mt-1 font-bold text-md rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+        >Exit</button>
+      </div>
     </div>
 
     <script src="/js/blog.js"></script>
