--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,27 +1,28 @@
 <div class="flex flex-col justify-center items-center">
-  <h2 class="text-2xl text-slate-300 uppercase">Welcome {{username}}!</h2>
+  <h2 class="my-3 text-2xl text-slate-300 uppercase">Welcome {{username}}!</h2>
 
         <div class="flex justify-center items-center createNew">
           <button
+            id="hide-btn"
             type="submit"
-            class="mt-2 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+            class="mt-2 mb-8 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
           >Create New Blog</button>
         </div>
       
 
     {{#if blogs.length}}
-      <div class="blogList">
-        <h3 class="text-center font-bold text-xl mb-3">Blogs</h3>
+      <div class="blogList w-3/5 max-w-lg relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden">
+        <h3 class="text-center font-bold text-xl mb-3 py-3">Everyone's Blogs</h3>
 
         {{#each blogs as |blog|}}
           <div class="flex justify-center">
             <div
-              class="flex justify-between items-center border-2 rounded-sm p-2 bg-slate-600 border-slate-600 mb-2"
+              class="flex justify-between items-center border-2 rounded-md p-2 bg-slate-600 border-slate-600 mb-2 w-11/12"
             >
               <div>
                 <a href="/blog/{{blog.id}}">
                   <h4
-                    class="font-bold text-lg mr-8 duration-300 hover:text-indigo-200"
+                    class="font-bold text-lg transition-all duration-200 transform hover:scale-105 mr-4"
                   >{{blog.title}}</h4>
                 </a>
                 {{#if blog.tag}}
