--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,44 +1,52 @@
 <div class="flex flex-col justify-center items-center">
   <h2 class="text-2xl text-slate-300 uppercase">Welcome {{username}}!</h2>
 
-        <div class="flex justify-center items-center createNew">
-          <button
-            type="submit"
-            class="mt-2 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
-          >Create New Blog</button>
-        </div>
-      
-
-    {{#if blogs.length}}
-      <div class="blogList">
-        <h3 class="text-center font-bold text-xl mb-3">Blogs</h3>
-
-        {{#each blogs as |blog|}}
-          <div class="flex justify-center">
-            <div
-              class="flex justify-between items-center border-2 rounded-sm p-2 bg-slate-600 border-slate-600 mb-2"
-            >
-              <div>
-                <a href="/blog/{{blog.id}}">
-                  <h4
-                    class="font-bold text-lg mr-8 duration-300 hover:text-indigo-200"
-                  >{{blog.title}}</h4>
-                </a>
-                {{#if blog.tag}}
-                  <p>Tag: {{blog.tag}}</p>
-                {{/if}}
-              </div>
-              {{#if blog.userHasBlog}}
-                <button
-                  class="font-bold text-sm rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
-                  data-id="{{blog.id}}"
-                >DELETE</button>
-              {{/if}}
-            </div>
-          </div>
-        {{/each}}
-      </div>
-    {{/if}}
+  <div class="flex justify-center items-center createNew">
+    <button
+      type="submit"
+      class="mt-2 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+    >Create New Blog</button>
   </div>
 
+  {{#if blogs.length}}
+    <div class="blogList">
+      <h3 class="text-center font-bold text-xl mb-3">Blogs</h3>
 
+      {{#each blogs as |blog|}}
+        <div class="flex justify-center">
+          <div
+            class="flex justify-between items-center border-2 rounded-sm p-2 bg-slate-600 border-slate-600 mb-2 w-full"
+          >
+            <div>
+              <a href="/blog/{{blog.id}}">
+                <h4
+                  class="font-bold text-lg mr-8 duration-300 hover:text-indigo-400"
+                >{{blog.title}}</h4>
+              </a>
+              <p>Author:
+                <a
+                  href="/user/{{blog.user.username}}"
+                  class="duration-300 hover:text-indigo-400"
+                >{{blog.user.username}}</a></p>
+              {{#if blog.tag}}
+                <p>Tag:
+                  <a
+                    href="/tag/{{blog.tag}}"
+                    class="duration-300 hover:text-indigo-400"
+                  >{{blog.tag}}</a></p>
+              {{/if}}
+            </div>
+            {{#if blog.userHasBlog}}
+              <button
+                class="font-bold text-sm rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+                data-id="{{blog.id}}"
+              >DELETE</button>
+            {{/if}}
+          </div>
+        </div>
+      {{/each}}
+    </div>
+  {{/if}}
+</div>
+
+<script src="/js/blog.js"></script>
