--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,7 +8,7 @@
       class="my-3 text-2xl text-slate-300 uppercase text-center"
     >{{username}}'s Page</h2>
     <div>
-      <h2 class="text-xl text-slate-300 uppercase my-5 text-center">Blogs:</h2>
+      <h2 class="text-xl text-slate-300 uppercase my-5 text-center">Your Blogs:</h2>
       {{#if blogs.length}}
         <div class="blogList">
           {{#each blogs as |blog|}}
@@ -49,7 +49,7 @@
     </div>
 
     <div class="bg-[#1e1a36]/70 p-4 text-sm font-semibold backdrop-blur-sm">
-      <h3 class="text-2xl text-slate-300 uppercase">User Tag's:</h3>
+      <h3 class="text-2xl text-slate-300 uppercase">User ChatRoom Tag's:</h3>
       {{! active joined chats }}
       {{#if blogs.length}}
         <ul
