--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,12 +1,20 @@
-<div class="flex flex-col justify-center items-center">
-  <h2 class="my-3 text-2xl text-slate-300 uppercase">Welcome {{username}}!</h2>
+<div
+  class="bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] bg-[#292240] flex flex-col justify-center items-center"
+>
+  <div
+    class="bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-xs my-4 px-6 overflow-hidden"
+  >
+    <h2
+      class="my-3 text-2xl text-slate-300 uppercase font-semibold text-4xl"
+    >Welcome {{username}}!</h2>
 
-  <div class="flex justify-center items-center createNew">
-    <button
-      id="hide-btn"
-      type="submit"
-      class="mt-2 mb-8 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
-    >Create New Blog</button>
+    <div class="flex justify-center items-center createNew">
+      <button
+        id="hide-btn"
+        type="submit"
+        class="mt-2 mb-8 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+      >Create New Blog</button>
+    </div>
   </div>
 
   {{#if blogs.length}}
@@ -23,7 +31,7 @@
             <div>
               <a href="/blog/{{blog.id}}">
                 <h4
-                  class="font-bold text-lg transition-all duration-200 transform hover:scale-105 mr-4"
+                  class="font-bold text-lg duration-300 hover:text-indigo-400 mr-4"
                 >{{blog.title}}</h4>
               </a>
               <p>Author:
