change double username on user profile

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,7 +14,7 @@
       {{else}}
         <h2
           class="text-xl text-slate-300 uppercase my-5 text-center"
-        >{{username}}'s Blogs:</h2>
+        >Blogs:</h2>
       {{/if}}
       {{#if blogs.length}}
         <div class="blogList">
