blog page styling and mainpage scroll

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
 
-  <body class="bg-slate-900 text-gray-300">
+  <body class="bg-slate-900 text-gray-300 overflow-hidden">
     <header
       class="flex relative lg:justify-end sm:justify-between items-center p-8 bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
       <div class="flex absolute chatspace">
