--- a/views/partials/createBlog.handlebars
+++ b/views/partials/createBlog.handlebars
@@ -1,5 +1,5 @@
 <div
-  class="createBlogForm bg-slate-900 border text-gray-300 mx-2 rounded-[6px] w-7/12 absolute hidden"
+  class="createBlogForm w-3/5 max-w-lg bg-[#231f39] rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm my-5 p-6 absolute hidden"
   style="top: 25%;"
 >
   <h3 class="text-center font-bold text-xl my-2">Create a New Blog</h3>
