--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -10,6 +10,36 @@
   display: block;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff2a;
+  border-radius: 5px;
+}
+
+/* Track */
+.blogList::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+.blogList::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+.blogList:hover::-webkit-scrollbar-thumb {
+  background: #ffffff2a;
+}
+
 .chatspace {
   position: absolute;
   top: 50%;
@@ -24,5 +54,5 @@
 }
 
 .text-shadow {
-  text-shadow: #FC0 1px 0 10px;
+  text-shadow: #fc0 1px 0 10px;
 }
