--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1388,6 +1388,10 @@ video {
   text-shadow: #fc0 1px 0 10px;
 }
 
+.height {
+  height: calc(100vh - 104px);
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
