--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
 
-  <body class="bg-slate-900 text-gray-300 overflow-hidden">
+  <body class="bg-slate-900 text-gray-300">
     <header
       class="flex relative lg:justify-end sm:justify-between items-center p-8 bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
       <div class="flex absolute chatspace">
@@ -40,7 +40,7 @@
       {{#if logged_in}}
         <aside
         {{!-- TEST mobile hidden  hidden lg:block--}}
-          class="h-screen bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-sky-50 rounded-sm w-2/12 flex flex-col items-center"
+          class="height bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-sky-50 rounded-sm w-2/12 flex flex-col items-center"
         >
           {{#each chatrooms as |chatroom|}}
             {{#if chatroom.userHasTag}}
@@ -54,7 +54,7 @@
         </aside>
       {{/if}}
       {{!-- TESTING main look, changed width and mt, w-full for body render --}}
-      <main class="w-full mx-auto flex justify-center">
+      <main class="w-full mx-auto flex justify-center height">
         {{!-- TEST w-full for profile render--}}
       <div id="main" class="show w-full">
         {{{body}}}
