blog scroll, no page height fix yet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -742,6 +742,10 @@ video {
   height: 100vh;
 }
 
+.max-h-screen {
+  max-height: 100vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1148,6 +1152,10 @@ video {
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
 }
 
 .text-center {
