--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -19,7 +19,8 @@
 
   {{#if blogs.length}}
     <div
-      class="blogList w-3/5 max-w-lg relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden"
+    {{!-- TEST adding screen height --}}
+      class="blogList h-screen w-3/5 max-w-lg relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden"
     >
       <h3 class="text-center font-bold text-xl mb-3 py-3">Everyone's Blogs</h3>
 
