--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,7 +59,7 @@
               </button>
               <button
                 class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:flex my-2"
-                id="logout"
+                id="logout-2"
               ><a href="/login">LOGOUT</a></button>
             {{else}}
               <a
