hid mobile logout btn

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,7 +58,7 @@
                 <a href="/profile">PROFILE</a>
               </button>
               <button
-                class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:flex my-2"
+                class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:hidden md:flex my-2"
                 id="logout-2"
               ><a href="/login">LOGOUT</a></button>
             {{else}}
