tag page link fix, hamburger placement

--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -5,7 +5,7 @@
     class="bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-xs my-4 px-6 overflow-hidden"
   >
     <h2
-      class="my-3 text-2xl text-slate-300 uppercase font-semibold text-4xl"
+      class="my-3 text-2xl text-slate-300 uppercase font-semibold md:text-4xl"
     >Welcome {{username}}!</h2>
 
     <div class="flex justify-center items-center createNew">
