--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -57,7 +57,7 @@
     </div>
 
     <div class="bg-[#1e1a36]/70 p-4 text-sm font-semibold backdrop-blur-sm">
-      <h3 class="text-2xl text-slate-300 uppercase">User ChatRoom Tag's:</h3>
+      <h3 class="text-2xl text-slate-300 uppercase">{{username}}'s Blog Tags:</h3>
       {{! active joined chats }}
       {{#if blogs.length}}
         <ul
