--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
       class="flex relative lg:justify-end sm:justify-between items-center p-8 bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
       <div class="flex absolute chatspace">
         <h1>
-          <a class="text-5xl font-bold text-violet-100" href="/">ChatSpace</a>
+          <a class="text-4xl md:text-5xl font-bold text-violet-100" href="/">ChatSpace</a>
         </h1>
       </div>
       <nav class="flex flex-row items-center gap-2 w-full justify-between">
@@ -39,11 +39,10 @@
     <div class="flex flex-row h-screen">
       {{#if logged_in}}
       {{!-- TEST mobile burger menu --}}
-      <div class="px-2 py-2 cursor-pointer md:hidden w-1/12" id="burger">
+      <div class="fixed top-4 px-2 py-2 cursor-pointer md:hidden w-1/12" id="burger">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
-
       </div>
         <aside
         {{!-- TEST mobile hidden  hidden lg:flex      made lg:w-2/12 and w-1/3 for smaller  position absolute on md--}}
@@ -53,12 +52,12 @@
         {{!-- TEST mobile profile and logout , md:hidden md:flex------------------------------------}}
             {{#if logged_in}}
               <button
-                class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:hidden md:flex my-2"
+                class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:hidden my-2"
               >
                 <a href="/profile">PROFILE</a>
               </button>
               <button
-                class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:hidden md:flex my-2"
+                class="rounded-md bg-rose-600 p-2 font-bold duration-300 hover:bg-indigo-400 md:hidden my-2"
                 id="logout-2"
               ><a href="/login">LOGOUT</a></button>
             {{else}}
