--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -90,6 +90,21 @@
         {{> createBlog}}
       </main>
     </div>
+    {{!-- TEST footer dark:bg-gray-800  --}}
+    <footer class="rounded-lg shadow bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
+      <div class="w-full mx-auto max-w-screen-xl p-2 md:flex md:items-center md:justify-between">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">@ 2023 ChatSpace.
+        </span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+            <li>
+                <a href="https://opensource.org/licenses/MIT" class="hover:underline me-4 md:me-6">MIT Licensing</a>
+            </li>
+            <li>
+                <a href="https://github.com/RickiBobbii/ChatSpace" class="hover:underline">Contact Developers</a>
+            </li>
+        </ul>
+      </div>
+    </footer>
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
     {{/if}}
