--- a/views/tags.handlebars
+++ b/views/tags.handlebars
@@ -27,8 +27,7 @@
                     >{{user.username}}</a></p>
                   {{#if blog.tag}}
                     <p>Tag:
-                      <a
-                      >{{blog.tag}}</a></p>
+                      <a>{{blog.tag}}</a></p>
                   {{/if}}
                 </div>
               </div>
