back button bugfix on heroku

--- a/views/tags.handlebars
+++ b/views/tags.handlebars
@@ -27,8 +27,7 @@
                     >{{user.username}}</a></p>
                   {{#if blog.tag}}
                     <p>Tag:
-                      <a
-                      >{{blog.tag}}</a></p>
+                      <a>{{blog.tag}}</a></p>
                   {{/if}}
                 </div>
               </div>
@@ -39,8 +38,9 @@
     </div>
   </section>
   <button
+    id="goBack"
     class="flex justify-center font-bold text-sm rounded-sm mt-8 bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
-  ><a id="goBack">Go Back</a></button>
+  ><p>Go Back</p></button>
 </div>
 
 <script src="/js/goBack.js"></script>
