--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -4,7 +4,12 @@
   <section
     class="w-3/5 max-w-lg bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm my-5 p-6"
   >
-    <h2 class="text-2xl font-bold" id="oldBlogTitle">{{title}}</h2>
+    <div class="md:w-72">
+      <h2
+        class="text-2xl font-bold mb-1"
+        id="oldBlogTitle"
+      >{{title}}</h2>
+    </div>
     <p class="text-sm">Created by
       <strong>
         <a
