--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -80,6 +80,13 @@
             >LOGIN</a>
           {{/if}}
           {{#each chatrooms as |chatroom|}}
+            {{#if chatroom.default}}
+              <a class="chatrooms w-9/12" id="{{id}}">
+                <button
+                  class="chatTitle my-5 w-full transform rounded-md bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black p-4 font-bold capitalize duration-300 hover:bg-indigo-400"
+                >{{chatroom.title}}</button>
+              </a>
+            {{/if}}
             {{#if chatroom.userHasTag}}
               <a class="chatrooms w-9/12" id="{{id}}">
                 <button
