fixed 2 files to work with prettier, added wallpaper fix

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 {{!-- added bg-cover to stop background from repeating at larger screens --}}
-{{!-- wallapaper found from tailwind component --}}
+{{!-- wallpaper found from tailwind component --}}
 <div
-  class="flex min-h-screen items-center justify-center bg-[#292240] bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] text-[#9e9cb6]"
+  class="flex min-h-screen items-center justify-center bg-cover bg-[#292240] bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] text-[#9e9cb6]"
 >
   <section
     class="relative mx-2 w-3/5 max-w-lg overflow-hidden rounded-[6px] bg-[#231f39]/60 shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm"
